--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "description": "Show an alert whenever a CA is encountered for the first time",
     "type": "bool",
     "value": true
+  },
+  {
+    "name": "report_cas",
+    "title": "Report Information about CAs",
+    "description": "Help us with our research by sending anonymized information",
+    "type": "bool",
+    "value": true
   }
   ]
 }
